<resources>
    <string name="app_name" translatable="false">Aggregator</string>
    <string name="app_site" translatable="false">https://tughi.github.io/aggregator-android</string>
    <string name="app_feed" translatable="false">https://tughi.github.io/aggregator-android/news.rss</string>
    <string name="action__add_star">Add star</string>
    <string name="action__add_rule">Add rule</string>
    <string name="action__backup">Backup</string>
    <string name="action__cancel">Cancel</string>
    <string name="action__close">Close</string>
    <string name="action__delete">Delete</string>
    <string name="action__export">Export</string>
    <string name="action__invert_selection">Invert selection</string>
    <string name="action__mark_all_read">Mark all as read</string>
    <string name="action__mark_done">Mark as done</string>
    <string name="action__mark_pinned">Keep as unread</string>
    <string name="action__new_tag">New tag</string>
    <string name="action__no">No</string>
    <string name="action__refresh">Refresh</string>
    <string name="action__remove">Remove</string>
    <string name="action__remove_star">Remove star</string>
    <string name="action__rename">Rename</string>
    <string name="action__restore">Restore</string>
    <string name="action__save">Save</string>
    <string name="action__select">Select</string>
    <string name="action__settings">Settings</string>
    <string name="action__share">Share</string>
    <string name="action__show_read_entries">Show read entries</string>
    <string name="action__sort_entries">Sort entries …</string>
    <string name="action__sort_entries__by_date__asc">by date, ascending</string>
    <string name="action__sort_entries__by_date__desc">by date, descending</string>
    <string name="action__sort_entries__by_title">by title</string>
    <string name="action__subscribe">Subscribe</string>
    <string name="action__tag">Tag</string>
    <string name="action__unsubscribe">Unsubscribe</string>
    <string name="action__update">Update</string>
    <string name="action__yes">Yes</string>
    <string name="backup__title">Backup</string>
    <string name="backup__description">A backup file contains all feeds, aggregated entries, configured tags and update settings.\n\nUse this option in order to migrate your data to a different device.\n\n<i><b>IMPORTANT:</b> The restore action erases any existing data.</i></string>
    <string name="backup__backup__message">Backing up …</string>
    <string name="backup__restore__message">Restoring …</string>
    <string name="backup__error__unsupported_file_format">Unsupported file format</string>
    <string name="cleanup_mode">Cleanup mode</string>
    <string name="cleanup_mode__age__3_days">3 days</string>
    <string name="cleanup_mode__age__3_days__description">Deletes entries older than 3 days.</string>
    <string name="cleanup_mode__age__1_week">1 week</string>
    <string name="cleanup_mode__age__1_week__description">Deletes entries older than 1 week.</string>
    <string name="cleanup_mode__age__1_month">1 month</string>
    <string name="cleanup_mode__age__1_month__description">Deletes entries older than 1 month.</string>
    <string name="cleanup_mode__age__3_months">3 months</string>
    <string name="cleanup_mode__age__3_months__description">Deletes entries older than 3 months.</string>
    <string name="cleanup_mode__age__6_months">6 months</string>
    <string name="cleanup_mode__age__6_months__description">Deletes entries older than 6 months.</string>
    <string name="cleanup_mode__age__1_year">1 year</string>
    <string name="cleanup_mode__age__1_year__description">Deletes entries older than 1 year.</string>
    <string name="cleanup_mode__age__3_years">3 years</string>
    <string name="cleanup_mode__age__3_years__description">Deletes entries older than 3 years.</string>
    <string name="cleanup_mode__age__6_years">6 years</string>
    <string name="cleanup_mode__age__6_years__description">Deletes entries older than 6 years.</string>
    <string name="cleanup_mode__default">Default (%1$s)</string>
    <string name="cleanup_mode__default__description">Use the default cleanup mode.</string>
    <string name="cleanup_mode__never">Never</string>
    <string name="cleanup_mode__never__description">Aggregator does not delete entries automatically.</string>
    <string name="delete_tag__message">Are you sure you want to delete this tag?</string>
    <string name="entry_list__no_feed_entries__all">There are no entries in this feed.</string>
    <string name="entry_list__no_feed_entries__unread">There are no unread entries in this feed.</string>
    <string name="entry_list__no_tagged_entries__all">There are no entries with this tag.</string>
    <string name="entry_list__no_tagged_entries__unread">There are no unread entries with this tag.</string>
    <string name="entry_list__placeholder__loading">Loading…</string>
    <string name="entry_tag_rule__condition">Condition</string>
    <string name="entry_tag_rule__delete__message">Are you sure you want to delete this entry tag rule?</string>
    <string name="entry_tag_rule__feed">Feed</string>
    <string name="entry_tag_rule__feed__any">Any</string>
    <string name="entry_tag_rule__tag">Tag</string>
    <string name="entry_tag_rule__title">Entry tag rule</string>
    <string name="entry_tag_rule__type">Type</string>
    <string name="entry_tag_rule__type__feed">Feed rule</string>
    <string name="entry_tag_rule__type__feed__description">This rule is applied on entries that belong to one feed only.</string>
    <string name="entry_tag_rule__type__global">Global rule</string>
    <string name="entry_tag_rule__type__global__description">This rule is applied on any entry, no matter what feed they belong to.</string>
    <string name="entry_tag_rule__type__title">Rule type</string>
    <string name="entry_tag_rules__condition__any">Any</string>
    <string name="entry_tag_rules__title">Entry tag rules</string>
    <string name="entry_tags">Entry tags</string>
    <string name="feed_list_item__last_update_error">Update error %1$d: %2$s</string>
    <string name="feed_list_item__last_update_time">Updated: %1$s</string>
    <string name="feed_list_item__last_update_time__never">Updated: never</string>
    <string name="feed_list_item__next_update_time">Auto update: %1$s</string>
    <string name="feed_list_item__next_update_time__disabled">Auto update: disabled</string>
    <string name="feed_list_item__next_update_time__on_app_launch">Auto update: on app launch</string>
    <string name="feed_settings">Feed settings</string>
    <string name="feed_settings__cleanup_mode">Cleanup mode</string>
    <plurals name="feed_settings__entry_tag_rules">
        <item quantity="one">1 rule</item>
        <item quantity="other">%d rules</item>
    </plurals>
    <string name="feed_settings__title">Title</string>
    <string name="feed_settings__update_mode">Update mode</string>
    <string name="feed_settings__url">URL</string>
    <string name="feeds_empty_message">You don\'t have any feeds yet.</string>
    <string name="my_feed_settings">My feed settings</string>
    <string name="my_feed_settings__excluded_tags">Excluded tags</string>
    <string name="my_feed_settings__excluded_tags__intro">If <b>excluded tags</b> are specified, <b>My Feed</b> will hide all entries that have been tagged with at least one of these tags.</string>
    <string name="my_feed_settings__excluded_tags__none">None</string>
    <string name="my_feed_settings__intro"><b>My Feed</b> can be configured to display only a subset of entries.</string>
    <string name="my_feed_settings__included_tags">Included tags</string>
    <string name="my_feed_settings__included_tags__intro">If <b>included tags</b> are specified, <b>My Feed</b> will show all entries that have been tagged with at least one of these tags.</string>
    <string name="my_feed_settings__included_tags__none">None</string>
    <string name="my_feed_settings__notification">New entries notification</string>
    <string name="my_feed_settings__notification__denied">Aggregator was blocked from posting notifications</string>
    <string name="notification_channel__my_feed">My feed</string>
    <plurals name="notification__my_feed__new_entries">
        <item quantity="one">\"My feed\" has 1 new entry</item>
        <item quantity="other">\"My feed\" has %d new entries</item>
    </plurals>
    <plurals name="notification__new_entries__tap">
        <item quantity="one">Tap to check it out</item>
        <item quantity="other">Tap to check them out</item>
    </plurals>
    <string name="opml_export__title">OPML feeds</string>
    <string name="opml_import__title">OPML feeds</string>
    <string name="sharing__share_via">Share via…</string>
    <string name="styling__accent">Accent color</string>
    <string name="styling__title">Theme</string>
    <string name="styling__bottom_navigation">Bottom navigation</string>
    <string name="subscribe__app_feed">Add news feed</string>
    <string name="subscribe__app_feed__hint">Stay up to date with latest <b>Aggregator</b> news.</string>
    <string name="subscribe__find_feeds">Find feeds</string>
    <string name="subscribe__intro">Content providers, like news sites and blogs, often use feeds as an alternative way to inform readers about new or updated articles.\n\n<b>Aggregator</b> is able to detect if a website is providing such feeds.\n\n\nAdditionally, <b>Aggregator</b> also supports adding feeds from OPML files.</string>
    <string name="subscribe__load_opml_file">Load OPML file</string>
    <string name="subscribe__url__hint">Website or feed URL</string>
    <string name="tag_settings">Tag settings</string>
    <string name="tag_settings__name">Name</string>
    <string name="tag_settings__tagged_entries__user">Tagged entries</string>
    <string name="tag_settings__tagged_entries__rule__all_feeds">Tagged entries from any feed</string>
    <string name="tag_settings__tagged_entries__rule__all_feeds_with_condition">Tagged entries from any feed, where: $CONDITION</string>
    <string name="tag_settings__tagged_entries__rule__from_feed">Tagged entries from $FEED_TITLE</string>
    <string name="tag_settings__tagged_entries__rule__from_feed_with_condition">Tagged entries from $FEED_TITLE, where: $CONDITION</string>
    <string name="tags_item__total_entries">Total entries: %1$d</string>
    <string name="tags_item__unread_entries">Unread entries: %1$d</string>
    <string name="title_add_feed">Add feed</string>
    <string name="title_my_feed">My feed</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_tags">Tags</string>
    <string name="support__title">Support</string>
    <string name="unsubscribe_feed__message">Are you sure you want to unsubscribe from this feed and delete all its entries?</string>
    <string name="update_mode">Update mode</string>
    <string name="update_mode__adaptive">Adaptive</string>
    <string name="update_mode__adaptive__description">Aggregator decides when to update the feed based on the already aggregated entries.</string>
    <string name="update_mode__daily">Daily</string>
    <string name="update_mode__default">Default (%1$s)</string>
    <string name="update_mode__default__description">Use the default update mode.</string>
    <string name="update_mode__disabled">Disabled</string>
    <string name="update_mode__disabled__description">Disables automated feed updates.</string>
    <string name="update_mode__every_15_minutes">Every 15 minutes</string>
    <string name="update_mode__every_30_minutes">Every 30 minutes</string>
    <string name="update_mode__every_45_minutes">Every 45 minutes</string>
    <string name="update_mode__every_hour">Every hour</string>
    <string name="update_mode__every_2_hours">Every 2 hours</string>
    <string name="update_mode__every_3_hours">Every 3 hours</string>
    <string name="update_mode__every_4_hours">Every 4 hours</string>
</resources>