<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/show_read_entries"
        android:checkable="true"
        android:title="@string/action__show_read_entries" />
    <item android:title="@string/action__sort_entries">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_date_asc"
                    android:title="@string/action__sort_entries__by_date__asc" />
                <item
                    android:id="@+id/sort_by_date_desc"
                    android:title="@string/action__sort_entries__by_date__desc" />
                <item
                    android:id="@+id/sort_by_title"
                    android:title="@string/action__sort_entries__by_title" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/mark_all_read"
        android:title="@string/action__mark_all_read" />
</menu>
