<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/styling__title"
        android:textAppearance="?textAppearanceCaption" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/theme_light"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_light" />

        <ImageView
            android:id="@+id/theme_dark"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_dark" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/styling__accent"
        android:textAppearance="?textAppearanceCaption" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/theme_accent_purple"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_accent_purple" />

        <ImageView
            android:id="@+id/theme_accent_red"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_accent_red" />

        <ImageView
            android:id="@+id/theme_accent_orange"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_accent_orange" />

        <ImageView
            android:id="@+id/theme_accent_green"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_accent_green" />

        <ImageView
            android:id="@+id/theme_accent_blue"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_accent_blue" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/styling__bottom_navigation"
        android:textAppearance="?textAppearanceCaption" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/theme_bottom_navigation_accent"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_bottom_navigation_accent" />

        <ImageView
            android:id="@+id/theme_bottom_navigation_gray"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/theme_bottom_navigation_gray" />

    </LinearLayout>

</LinearLayout>

